--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,5 +12,8 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          config_timezone: Europe/London
           base: header, activity, community, repositories, metadata
+          retries: 3
+          retries_delay: 3000
           
